# Curso-FastAPI-Avancado-Projeto01

./: README.md  main.py  pyproject.toml
routers/: async_converter.py  sync_converter.py
schemas/: converterInput.py  converterOutput.py
utils/: converter.py
