[tool.poetry]
name = "projeto01"
version = "0.1.0"
description = ""
authors = ["mr-reinaldo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.110.3"}
uvicorn = "^0.29.0"
requests = "^2.31.0"
aiohttp = "^3.9.5"
black = "^24.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
